learn some bug of the -= operator

--- a/homework_answer/Deep-Learning-Homework/COURSE 1/week-2/homework/Logistic Regression with a Neural Network mindset original.ipynb
+++ b/homework_answer/Deep-Learning-Homework/COURSE 1/week-2/homework/Logistic Regression with a Neural Network mindset original.ipynb
@@ -650,26 +650,22 @@
     "\n",
     "<table style=\"width:40%\">\n",
     "    <tr>\n",
-    "       <td> **w** </td>\n",
-    "       <td>[[ 0.1124579 ]\n",
-    " [ 0.23106775]] </td>\n",
+    "       <td> <strong>w</strong> </td>\n",
+    "       <td>[[ 0.1124579 ]<br>[ 0.23106775]] </td>\n",
     "    </tr>\n",
-    "    \n",
     "    <tr>\n",
-    "       <td> **b** </td>\n",
+    "       <td> <strong>b</strong> </td>\n",
     "       <td> 1.55930492484 </td>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "       <td> **dw** </td>\n",
-    "       <td> [[ 0.90158428]\n",
-    " [ 1.76250842]] </td>\n",
+    "       <td> <strong>dw</strong> </td>\n",
+    "       <td> [[ 0.90158428]<br>[ 1.76250842]] </td>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "       <td> **db** </td>\n",
+    "       <td> <strong>db</strong> </td>\n",
     "       <td> 0.430462071679 </td>\n",
     "    </tr>\n",
-    "\n",
-    "</table>"
+    "</table>\n"
    ]
   },
   {
