--- a/week2.ipynb
+++ b/week2.ipynb
@@ -4,25 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2 - Overview of the Problem set\n",
-    "\n",
-    "**Statement for lr_utils:**\n",
-    "\n",
-    "The class load_dataset in the lr_utils load the dataset from test_catvnocat.h5 and train_catvnocat.h5 in the document datasets.\n",
-    "\n",
-    "`train_set_x, train_set_y, test_set_x, test_set_y, classes = load_dataset()`"
+    "## Overview of the Problem set\n",
+    "\\\n",
+    "**Statement for lr_utils:**\\\n",
+    "\\\n",
+    "The class load_dataset in the lr_utils load the dataset from test_catvnocat.h5 and train_catvnocat.h5 in the document datasets.\\\n",
+    "```python\n",
+    "train_set_x, train_set_y, test_set_x, test_set_y, classes = load_dataset()\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_set_x_orig.shape of 208th photo (64, 64, 3)\n",
       "Number of training examples: m_train = 209\n",
       "Number of testing examples: m_test = 50\n",
       "Height/Width of each image: num_px = 64\n",
@@ -30,7 +30,8 @@
       "train_set_x shape: (209, 64, 64, 3)\n",
       "train_set_y shape: (1, 209)\n",
       "test_set_x shape: (50, 64, 64, 3)\n",
-      "test_set_y shape: (1, 50)\n"
+      "test_set_y shape: (1, 50)\n",
+      "train_set_x_orig.shape of 208th photo (64, 64, 3)\n"
      ]
     }
    ],
@@ -73,12 +74,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The structures of data**\n"
+    "**The structures of data:**\\\n",
+    "\\\n",
+    "Number of training examples: m_train = 209\\\n",
+    "Number of testing examples: m_test = 50\\\n",
+    "Height/Width of each image: num_px = 64\\\n",
+    "Each image is of size: (64, 64, 3)\\\n",
+    "train_set_x shape: (209, 64, 64, 3)\\\n",
+    "train_set_y shape: (1, 209)\\\n",
+    "test_set_x shape: (50, 64, 64, 3)\\\n",
+    "test_set_y shape: (1, 50)\\\n",
+    "train_set_x_orig.shape of 208th photo (64, 64, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,6 +115,443 @@
     "index = 208\n",
     "plt.imshow(train_set_x_orig[index])\n",
     "print (\"y = \" + str(train_set_y[:, index]) + \", it's a '\" + classes[np.squeeze(train_set_y[:, index])].decode(\"utf-8\") +  \"' picture.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Flatten the datasets**\\\n",
+    "\\\n",
+    "We could use X.reshape or reshaped(X).\\\n",
+    "\\\n",
+    "`X.reshape(dimension,-1)` means it will be flatten as dimension $*$ a flattened dimension(equals to totaldimesion $/$ diemension)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_set_x_flatten shape: (12288, 209)\n",
+      "train_set_y shape: (1, 209)\n",
+      "test_set_x_flatten shape: (12288, 50)\n",
+      "test_set_y shape: (1, 50)\n",
+      "sanity check after reshaping: [17 31 56 22 33]\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''flatten the images'''\n",
+    "\n",
+    "train_set_x_flatten = None\n",
+    "test_set_x_flatten = None\n",
+    "\n",
+    "train_set_x_flatten = train_set_x_orig.reshape(train_set_x_orig.shape[0], -1).T\n",
+    "test_set_x_flatten = test_set_x_orig.reshape(test_set_x_orig.shape[0], -1).T\n",
+    "\n",
+    "print (\"train_set_x_flatten shape: \" + str(train_set_x_flatten.shape))\n",
+    "print (\"train_set_y shape: \" + str(train_set_y.shape))\n",
+    "print (\"test_set_x_flatten shape: \" + str(test_set_x_flatten.shape))\n",
+    "print (\"test_set_y shape: \" + str(test_set_y.shape))\n",
+    "print (\"sanity check after reshaping: \" + str(train_set_x_flatten[0:5,0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Another way to reshape:**\\\n",
+    "```python\n",
+    "np.reshape(X,size)\n",
+    "```\n",
+    "size=(m,n,$\\dots$)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_set_x_flatten shape: (12288, 209)\n",
+      "train_set_y shape: (1, 209)\n",
+      "test_set_x_flatten shape: (12288, 50)\n",
+      "test_set_y shape: (1, 50)\n",
+      "sanity check after reshaping: [17 31 56 22 33]\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''flatten the images'''\n",
+    "\n",
+    "train_set_x_flatten = None\n",
+    "test_set_x_flatten = None\n",
+    "\n",
+    "train_set_x_flatten = np.reshape(train_set_x_orig, (np.shape(train_set_x_orig)[0],-1)).T\n",
+    "test_set_x_flatten = np.reshape(test_set_x_orig, (np.shape(test_set_x_orig)[0],-1)).T\n",
+    "\n",
+    "print (\"train_set_x_flatten shape: \" + str(train_set_x_flatten.shape))\n",
+    "print (\"train_set_y shape: \" + str(train_set_y.shape))\n",
+    "print (\"test_set_x_flatten shape: \" + str(test_set_x_flatten.shape))\n",
+    "print (\"test_set_y shape: \" + str(test_set_y.shape))\n",
+    "print (\"sanity check after reshaping: \" + str(train_set_x_flatten[0:5,0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Standardize the dataset:**\\\n",
+    "Take the standard of the whole numpy array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set_x = train_set_x_flatten/255.\n",
+    "test_set_x = test_set_x_flatten/255."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='blue'>\n",
+    "**What you need to remember:**\n",
+    "\n",
+    "Common steps for pre-processing a new dataset are:\n",
+    "- Figure out the dimensions and shapes of the problem (m_train, m_test, num_px, ...)\n",
+    "- Reshape the datasets such that each example is now a vector of size (num_px \\* num_px \\* 3, 1)\n",
+    "- \"Standardize\" the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## sigmod functions \n",
+    "\n",
+    "$$sigmod(\\omega^{T} x + b ) =\\frac{1}{1 + e^{-(\\omega^{T} x + b )}}$$\n",
+    "\n",
+    "Further, for the whole algorithm:\n",
+    "$$a(z) = sigmod(z)= \\frac{1}{1 + e^{-z}} $$\n",
+    "$$z = \\omega^{T} x + b $$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigmoid([0, 2]) = [0.5        0.88079708]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sigmoid(z):\n",
+    "    s = 1 / (1 + np.exp(-z))\n",
+    "    return s\n",
+    "\n",
+    "print (\"sigmoid([0, 2]) = \" + str(sigmoid(np.array([0,2]))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intializing parameters\n",
+    "\n",
+    "Using `dtype` to specify the variable type.\n",
+    "\n",
+    "**Notice:**\n",
+    "The element in np.zeros is not a number, it's type is numpy.int ot numpy.float.\n",
+    "\n",
+    "the result of `type()` and `X.dtype` is different."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The type of test1 is <class 'numpy.ndarray'>\n",
+      "The type of test2 is <class 'numpy.ndarray'>\n",
+      "The type of test1 is int32\n",
+      "The type of test2 is float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "test1 = np.zeros(1,dtype = int)\n",
+    "test2 = np.zeros(1,dtype = float)\n",
+    "\n",
+    "#using type function\n",
+    "print(\"The type of test1 is \" + str(type(test1)))\n",
+    "print(\"The type of test2 is \" + str(type(test2)))\n",
+    "\n",
+    "#using dtype of numpy\n",
+    "print(\"The type of test1 is \" + str(test1.dtype))\n",
+    "print(\"The type of test2 is \" + str(test2.dtype))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w = [[0.]\n",
+      " [0.]]\n",
+      "b = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def initialize_with_zeros(dim):\n",
+    "\n",
+    "    w = None\n",
+    "    b = None\n",
+    "    \n",
+    "    w = np.zeros((dim,1),dtype = float)\n",
+    "    b = 0\n",
+    "    \n",
+    "    assert(w.shape == (dim, 1))\n",
+    "    assert(isinstance(b, float) or isinstance(b, int))\n",
+    "    \n",
+    "    return w, b\n",
+    "\n",
+    "dim = 2\n",
+    "w, b = initialize_with_zeros(dim)\n",
+    "print (\"w = \" + str(w))\n",
+    "print (\"b = \" + str(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forward and Backward propagation\n",
+    "\n",
+    "Now that your parameters are initialized, you can do the \"forward\" and \"backward\" propagation steps for learning the parameters.\n",
+    "\n",
+    "**Exercise:** Implement a function `propagate()` that computes the cost function and its gradient.\n",
+    "\n",
+    "**Hints**:\n",
+    "\n",
+    "Forward Propagation:\n",
+    "- You get X\n",
+    "- You compute $A = \\sigma(w^T X + b) = (a^{(0)}, a^{(1)}, ..., a^{(m-1)}, a^{(m)})$\n",
+    "- You calculate the cost function: $J = -\\frac{1}{m}\\sum_{i=1}^{m}y^{(i)}\\log(a^{(i)})+(1-y^{(i)})\\log(1-a^{(i)})$\n",
+    "\n",
+    "Here are the two formulas you will be using: \n",
+    "\n",
+    "$$ \\frac{\\partial J}{\\partial w} = \\frac{1}{m}X(A-Y)^T$$\n",
+    "$$ \\frac{\\partial J}{\\partial b} = \\frac{1}{m} \\sum_{i=1}^m (a^{(i)}-y^{(i)})$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dw = [[0.99993216]\n",
+      " [1.99980262]]\n",
+      "db = 0.49993523062470574\n",
+      "cost = 6.000064773192205\n"
+     ]
+    }
+   ],
+   "source": [
+    "def propagate(w, b, X, Y):\n",
+    "    '''\n",
+    "    n the number of the features\n",
+    "    m the number of the sets\n",
+    "    w : n*1\n",
+    "    X : n*m\n",
+    "    Y : 1*m\n",
+    "    b : 1 -> 1*m const matrix (broadcasting)\n",
+    "    '''\n",
+    "\n",
+    "    m = X.shape[1]\n",
+    "\n",
+    "    A = None\n",
+    "    cost = None\n",
+    "\n",
+    "    dw = None\n",
+    "    db = None\n",
+    "\n",
+    "    z = np.dot(w.T,X) + b\n",
+    "    A = sigmoid(z)\n",
+    "\n",
+    "    cost = -(1/m) * (np.dot(Y, np.log(A).T) + np.dot(1 - Y, np.log(1 - A).T))\n",
+    "\n",
+    "    assert(A.shape == Y.shape)\n",
+    "\n",
+    "    dw = (1/m) * np.dot(X,(A - Y).T)\n",
+    "    db = (1/m) * np.sum(A - Y)\n",
+    "\n",
+    "    assert(dw.shape == w.shape)\n",
+    "    assert(db.dtype == float)\n",
+    "    cost = np.squeeze(cost)\n",
+    "    assert(cost.shape == ())\n",
+    "    \n",
+    "    grads = {\"dw\": dw,\n",
+    "             \"db\": db}\n",
+    "    \n",
+    "    return grads, cost\n",
+    "\n",
+    "w, b, X, Y = np.array([[1],[2]]), 2, np.array([[1,2],[3,4]]), np.array([[1,0]])\n",
+    "grads, cost = propagate(w, b, X, Y)\n",
+    "print (\"dw = \" + str(grads[\"dw\"]))\n",
+    "print (\"db = \" + str(grads[\"db\"]))\n",
+    "print (\"cost = \" + str(cost))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Notice:**\n",
+    "\n",
+    "*= /= += or -= could not be used when the type of variable changes, we should use a = a + xxx instead."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w = [[0.1124579 ]\n",
+      " [0.23106775]]\n",
+      "b = 1.5593049248448891\n",
+      "dw = [[0.90158428]\n",
+      " [1.76250842]]\n",
+      "db = 0.4304620716786828\n"
+     ]
+    }
+   ],
+   "source": [
+    "def optimize(w, b, X, Y, num_iterations, learning_rate, print_cost = False):\n",
+    "\n",
+    "    dw = None\n",
+    "    db = None\n",
+    "\n",
+    "    grads = {}\n",
+    "    costs = []\n",
+    "    \n",
+    "\n",
+    "    for i in range(num_iterations):\n",
+    "        grads, cost = propagate(w, b, X, Y)\n",
+    "\n",
+    "        dw = grads[\"dw\"]\n",
+    "        db = grads[\"db\"]\n",
+    "\n",
+    "        w = w - learning_rate * dw\n",
+    "        b = b - learning_rate * db\n",
+    "\n",
+    "        if i % 100 == 0:\n",
+    "            costs.append(cost)\n",
+    "\n",
+    "        # Print the cost every 100 training examples\n",
+    "        if print_cost and i % 100 == 0:\n",
+    "            print (\"Cost after iteration %i: %f\" %(i, cost))\n",
+    "    \n",
+    "        params = {\"w\": w,\n",
+    "                \"b\": b}\n",
+    "        \n",
+    "        grads = {\"dw\": dw,\n",
+    "                \"db\": db}\n",
+    "    \n",
+    "    return params, grads, costs\n",
+    "\n",
+    "params, grads, costs = optimize(w, b, X, Y, num_iterations= 100, learning_rate = 0.009, print_cost = False)\n",
+    "\n",
+    "print (\"w = \" + str(params[\"w\"]))\n",
+    "print (\"b = \" + str(params[\"b\"]))\n",
+    "print (\"dw = \" + str(grads[\"dw\"]))\n",
+    "print (\"db = \" + str(grads[\"db\"]))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 1 is out of bounds for axis 0 with size 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\sciencificcomputation\\code\\deeplearning\\week2.ipynb 单元格 22\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/sciencificcomputation/code/deeplearning/week2.ipynb#X31sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     \u001b[39massert\u001b[39;00m(Y_prediction\u001b[39m.\u001b[39mshape \u001b[39m==\u001b[39m (\u001b[39m1\u001b[39m, m))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/sciencificcomputation/code/deeplearning/week2.ipynb#X31sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m Y_prediction\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/sciencificcomputation/code/deeplearning/week2.ipynb#X31sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39mprint\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39mpredictions = \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(predict(w, b, X)))\n",
+      "\u001b[1;32mc:\\sciencificcomputation\\code\\deeplearning\\week2.ipynb 单元格 22\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/sciencificcomputation/code/deeplearning/week2.ipynb#X31sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m A \u001b[39m=\u001b[39m A\u001b[39m.\u001b[39mreshape(\u001b[39m1\u001b[39m,m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/sciencificcomputation/code/deeplearning/week2.ipynb#X31sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(m):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/sciencificcomputation/code/deeplearning/week2.ipynb#X31sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     \u001b[39mif\u001b[39;00m (A[\u001b[39m1\u001b[39;49m, i] \u001b[39m<\u001b[39m \u001b[39m0.5\u001b[39m):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/sciencificcomputation/code/deeplearning/week2.ipynb#X31sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m         Y_prediction[\u001b[39m0\u001b[39m, i] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/sciencificcomputation/code/deeplearning/week2.ipynb#X31sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 1 is out of bounds for axis 0 with size 1"
+     ]
+    }
+   ],
+   "source": [
+    "def predict(w, b, X):\n",
+    "    \n",
+    "    n = X.shape[0]\n",
+    "    m = X.shape[1]\n",
+    "    Y_prediction = np.zeros((1,m), dtype = \"float\")\n",
+    "    w = w.reshape(n, 1)\n",
+    "\n",
+    "    Z = np.dot(w.T, X) + b\n",
+    "    A = sigmoid(Z)\n",
+    "\n",
+    "    assert A.shape[1] == m, \"the shape of A doesn't equal to Y!\"\n",
+    "\n",
+    "    A = A.reshape(1,m)\n",
+    "\n",
+    "    for i in range(m):\n",
+    "        if (A[0, i] < 0.5):\n",
+    "            Y_prediction[0, i] = 0\n",
+    "        else:\n",
+    "            Y_prediction[0, i] = 1\n",
+    "\n",
+    "    assert(Y_prediction.shape == (1, m))\n",
+    "\n",
+    "    return Y_prediction\n",
+    "\n",
+    "print (\"predictions = \" + str(predict(w, b, X)))"
    ]
   }
  ],
