--- a/homework_answer/Deep-Learning-Homework/COURSE 1/week-3/homework/Planar data classification with one hidden layer original.ipynb
+++ b/homework_answer/Deep-Learning-Homework/COURSE 1/week-3/homework/Planar data classification with one hidden layer original.ipynb
@@ -238,7 +238,7 @@
     "$$a^{[1] (i)} = \\tanh(z^{[1] (i)})\\tag{2}$$\n",
     "$$z^{[2] (i)} = W^{[2]} a^{[1] (i)} + b^{[2] (i)}\\tag{3}$$\n",
     "$$\\hat{y}^{(i)} = a^{[2] (i)} = \\sigma(z^{ [2] (i)})\\tag{4}$$\n",
-    "$$y^{(i)}_{prediction} = \\begin{cases} 1 & \\mbox{if } a^{[2](i)} > 0.5 \\\\ 0 & \\mbox{otherwise } \\end{cases}\\tag{5}$$\n",
+    "$$y^{(i)}_{prediction} = \\begin{cases} 1 & \\text{if } a^{[2](i)} > 0.5 \\\\ 0 & \\text{otherwise } \\end{cases}\\tag{5}$$\n",
     "\n",
     "Given the predictions on all the examples, you can also compute the cost $J$ as follows: \n",
     "$$J = - \\frac{1}{m} \\sum\\limits_{i = 0}^{m} \\large\\left(\\small y^{(i)}\\log\\left(a^{[2] (i)}\\right) + (1-y^{(i)})\\log\\left(1- a^{[2] (i)}\\right)  \\large  \\right) \\small \\tag{6}$$\n",
@@ -321,17 +321,15 @@
     "\n",
     "<table style=\"width:20%\">\n",
     "  <tr>\n",
-    "    <td>**n_x**</td>\n",
+    "    <td>n_x</td>\n",
     "    <td> 5 </td> \n",
     "  </tr>\n",
-    "  \n",
     "    <tr>\n",
-    "    <td>**n_h**</td>\n",
+    "    <td>n_h</td>\n",
     "    <td> 4 </td> \n",
     "  </tr>\n",
-    "  \n",
     "    <tr>\n",
-    "    <td>**n_y**</td>\n",
+    "    <td>n_y</td>\n",
     "    <td> 2 </td> \n",
     "  </tr>\n",
     "  \n",
