--- a/homework_answer/Deep-Learning-Homework/COURSE 1/week-4/homework/Building your Deep Neural Network - Step by Step/Building your Deep Neural Network - Step by Step finished.ipynb
+++ b/homework_answer/Deep-Learning-Homework/COURSE 1/week-4/homework/Building your Deep Neural Network - Step by Step/Building your Deep Neural Network - Step by Step finished.ipynb
@@ -53,13 +53,11 @@
     "from testCases_v3 import *\n",
     "from dnn_utils_v2 import sigmoid, sigmoid_backward, relu, relu_backward\n",
     "\n",
-    "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (5.0, 4.0) # set default size of plots\n",
     "plt.rcParams['image.interpolation'] = 'nearest'\n",
     "plt.rcParams['image.cmap'] = 'gray'\n",
     "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "\n",
     "\n",
     "np.random.seed(1)"
    ]
@@ -117,9 +115,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error in callback <bound method AutoreloadMagics.pre_run_cell of <IPython.extensions.autoreload.AutoreloadMagics object at 0x000002ACD3F048C0>> (for pre_run_cell):\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "AutoreloadMagics.pre_run_cell() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;31mTypeError\u001b[0m: AutoreloadMagics.pre_run_cell() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
    "source": [
     "# GRADED FUNCTION: initialize_parameters\n",
     "\n",
@@ -162,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -331,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
