--- a/homework_answer/Deep-Learning-Homework/COURSE 1/week-4/homework/Building your Deep Neural Network - Step by Step/Building your Deep Neural Network - Step by Step original.ipynb
+++ b/homework_answer/Deep-Learning-Homework/COURSE 1/week-4/homework/Building your Deep Neural Network - Step by Step/Building your Deep Neural Network - Step by Step original.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -55,13 +55,9 @@
     "from testCases_v3 import *\n",
     "from dnn_utils_v2 import sigmoid, sigmoid_backward, relu, relu_backward\n",
     "\n",
-    "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (5.0, 4.0) # set default size of plots\n",
     "plt.rcParams['image.interpolation'] = 'nearest'\n",
     "plt.rcParams['image.cmap'] = 'gray'\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
     "\n",
     "np.random.seed(1)"
    ]
@@ -119,11 +115,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error in callback <bound method AutoreloadMagics.pre_run_cell of <IPython.extensions.autoreload.AutoreloadMagics object at 0x000001F1FF5AB050>> (for pre_run_cell):\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "AutoreloadMagics.pre_run_cell() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;31mTypeError\u001b[0m: AutoreloadMagics.pre_run_cell() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
    "source": [
     "# GRADED FUNCTION: initialize_parameters\n",
     "\n",
@@ -223,8 +237,6 @@
     "The initialization for a deeper L-layer neural network is more complicated because there are many more weight matrices and bias vectors. When completing the `initialize_parameters_deep`, you should make sure that your dimensions match between each layer. Recall that $n^{[l]}$ is the number of units in layer $l$. Thus for example if the size of our input $X$ is $(12288, 209)$ (with $m=209$ examples) then:\n",
     "\n",
     "<table style=\"width:100%\">\n",
-    "\n",
-    "\n",
     "    <tr>\n",
     "        <td>  </td> \n",
     "        <td> **Shape of W** </td> \n",
@@ -232,16 +244,13 @@
     "        <td> **Activation** </td>\n",
     "        <td> **Shape of Activation** </td> \n",
     "    <tr>\n",
-    "    \n",
     "    <tr>\n",
     "        <td> **Layer 1** </td> \n",
     "        <td> $(n^{[1]},12288)$ </td> \n",
     "        <td> $(n^{[1]},1)$ </td> \n",
     "        <td> $Z^{[1]} = W^{[1]}  X + b^{[1]} $ </td> \n",
-    "        \n",
     "        <td> $(n^{[1]},209)$ </td> \n",
     "    <tr>\n",
-    "    \n",
     "    <tr>\n",
     "        <td> **Layer 2** </td> \n",
     "        <td> $(n^{[2]}, n^{[1]})$  </td> \n",
@@ -249,7 +258,6 @@
     "        <td>$Z^{[2]} = W^{[2]} A^{[1]} + b^{[2]}$ </td> \n",
     "        <td> $(n^{[2]}, 209)$ </td> \n",
     "    <tr>\n",
-    "   \n",
     "       <tr>\n",
     "        <td> $\\vdots$ </td> \n",
     "        <td> $\\vdots$  </td> \n",
@@ -257,7 +265,6 @@
     "        <td> $\\vdots$</td> \n",
     "        <td> $\\vdots$  </td> \n",
     "    <tr>\n",
-    "    \n",
     "   <tr>\n",
     "        <td> **Layer L-1** </td> \n",
     "        <td> $(n^{[L-1]}, n^{[L-2]})$ </td> \n",
@@ -265,8 +272,6 @@
     "        <td>$Z^{[L-1]} =  W^{[L-1]} A^{[L-2]} + b^{[L-1]}$ </td> \n",
     "        <td> $(n^{[L-1]}, 209)$ </td> \n",
     "    <tr>\n",
-    "    \n",
-    "    \n",
     "   <tr>\n",
     "        <td> **Layer L** </td> \n",
     "        <td> $(n^{[L]}, n^{[L-1]})$ </td> \n",
@@ -274,7 +279,6 @@
     "        <td> $Z^{[L]} =  W^{[L]} A^{[L-1]} + b^{[L]}$</td>\n",
     "        <td> $(n^{[L]}, 209)$  </td> \n",
     "    <tr>\n",
-    "\n",
     "</table>\n",
     "\n",
     "Remember that when we compute $W X + b$ in python, it carries out broadcasting. For example, if: \n",
@@ -1373,7 +1377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
