--- a/week4/week4.ipynb
+++ b/week4/week4.ipynb
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,6 +575,36 @@
     "\n",
     "    ### END CODE HERE ###\n",
     "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 = [[-0.59562069 -0.09991781 -2.14584584  1.82662008]\n",
+      " [-1.76569676 -0.80627147  0.51115557 -1.18258802]\n",
+      " [-1.0535704  -0.86128581  0.68284052  2.20374577]]\n",
+      "b1 = [[-0.04659241]\n",
+      " [-1.28888275]\n",
+      " [ 0.53405496]]\n",
+      "W2 = [[-0.55569196  0.0354055   1.32964895]]\n",
+      "b2 = [[-0.84610769]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameters, grads = update_parameters_test_case()\n",
+    "parameters = update_parameters(parameters, grads, 0.1)\n",
+    "\n",
+    "print (\"W1 = \"+ str(parameters[\"W1\"]))\n",
+    "print (\"b1 = \"+ str(parameters[\"b1\"]))\n",
+    "print (\"W2 = \"+ str(parameters[\"W2\"]))\n",
+    "print (\"b2 = \"+ str(parameters[\"b2\"]))"
    ]
   }
  ],
